fixed spacing around h2 on mobile

--- a/src/css/shared.less
+++ b/src/css/shared.less
@@ -33,6 +33,7 @@ header.splash {
 
   @media @mobile {
     padding: 0 16px;
+    padding-top: 25px;
 
   }
 
@@ -77,7 +78,8 @@ main.article-content {
 
     @media @mobile {
       font-size: 30px;
-      padding-top: 20px;
+      margin-top: 10px;
+      padding-top: 0px;
     }
 
   }
@@ -216,6 +218,8 @@ blockquote {
   @media @mobile {
     float: none;
     width: 100%;
+    margin: auto;
+    padding-top: 5px;
   }
 }
 
